--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bcryptjs": "2.4.3",
     "codemirror": "^5.52.2",
+    "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.0",
     "express-handlebars": "^4.0.2",
